proxy-kubernetes/base-k8s-manifests/cloudflared-redis--redisbungee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-redis--redisbungee
spec:
  template:
    spec:
      containers:
      - name: cloudflared-redis--redisbungee
        image: cloudflare/cloudflared:2021.12.1
        ports:
        - containerPort: 6379
          name: redis
        livenessProbe:
          httpGet:
            path: /ready
            port: 3333
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /ready
            port: 3333
            scheme: HTTP
        startupProbe:
          httpGet:
            path: /ready
            port: 3333
            scheme: HTTP
          failureThreshold: 60
          periodSeconds: 10
        resources:
          requests:
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-redis--redisbungee
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
